--- a/web/index.html
+++ b/web/index.html
@@ -32,7 +32,7 @@
                     <span class="sr-only">搜索</span>
                     <span class="glyphicon glyphicon-search"></span>
                     </button>
-                    <a class="navbar-brand" href="/demo/web/index.html">LUYISWU</a>
+                    <a class="navbar-brand" href="/web/index.html">LUYISWU</a>
                 </div>
                 <div class="collapse navbar-collapse right-left" id="navbar-user-show">
                     <ul class="nav navbar-nav">
